/*
 * @begin:license
 *
 * Copyright (c) 2015-2019, Benjamin Niemann <pink@odahoda.de>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License along
 * with this program; if not, write to the Free Software Foundation, Inc.,
 * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 *
 * @end:license
 */

syntax = "proto2";

package noisicaa.pb;

import "noisicaa/music/model_base.proto";
import "noisicaa/music/model.proto";

extend ObjectBase {
  // Project (1xxxxx)
  optional Project project = 100000;
  optional Metadata metadata = 100001;

  // Samples (2xxxxx)
  optional Sample sample = 200000;
  optional SampleChannel sample_channel = 200001;

  // Pipeline graph (3xxxxx)
  optional NodeConnection node_connection = 300000;
  optional BaseNode base_node = 301000;
  optional Node node = 302000;
  optional SystemOutNode system_out_node = 303000;
  optional Port port = 304000;

  // Tracks (400xxx)
  optional Track track = 400000;
  optional MeasuredTrack measured_track = 400100;
  optional Measure measure = 400101;
  optional MeasureReference measure_reference = 400102;

  // Transfer Function (500xxx)
  optional TransferFunction transfer_function = 500000;
}
